--- a/ProducerConsumer/ProducerConsumer.vcxproj.filters
+++ b/ProducerConsumer/ProducerConsumer.vcxproj.filters
@@ -24,12 +24,27 @@
     <ClInclude Include="buffer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="producer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="consumer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ITstudent.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="buffer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="producer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="main.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="consumer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
