--- a/SocketImplementation/SocketProducer/SocketProducer.vcxproj
+++ b/SocketImplementation/SocketProducer/SocketProducer.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{782dba66-1e87-4151-9315-af510a096757}</ProjectGuid>
-    <RootNamespace>ProducerConsumer</RootNamespace>
+    <ProjectGuid>{5cd64e14-aff0-47c0-b92c-fb5ef1f90925}</ProjectGuid>
+    <RootNamespace>SocketProducer</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -70,6 +70,9 @@
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
+    <IntDir>$(Platform)\$(Configuration)\Int\</IntDir>
+  </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
@@ -103,6 +106,7 @@
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpp17</LanguageStandard>
+      <AdditionalIncludeDirectories>../../source;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -124,18 +128,22 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="buffer.h" />
-    <ClInclude Include="consumer.h" />
-    <ClInclude Include="course_mark.h" />
-    <ClInclude Include="ITstudent.h" />
-    <ClInclude Include="producer.h" />
+    <ClCompile Include="..\..\source\buffer\buffer.cpp" />
+    <ClCompile Include="..\..\source\buffer\network_buffer.cpp" />
+    <ClCompile Include="..\..\source\producer\network_producer.cpp" />
+    <ClCompile Include="..\..\source\producer\producer.cpp" />
+    <ClCompile Include="..\..\source\student\ITstudent.cpp" />
+    <ClCompile Include="main.cpp" />
+    <ClCompile Include="network_server.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="buffer.cpp" />
-    <ClCompile Include="consumer.cpp" />
-    <ClCompile Include="ITstudent.cpp" />
-    <ClCompile Include="main.cpp" />
-    <ClCompile Include="producer.cpp" />
+    <ClInclude Include="..\..\source\buffer\buffer.h" />
+    <ClInclude Include="..\..\source\buffer\network_buffer.h" />
+    <ClInclude Include="..\..\source\producer\network_producer.h" />
+    <ClInclude Include="..\..\source\producer\producer.h" />
+    <ClInclude Include="..\..\source\student\course_mark.h" />
+    <ClInclude Include="..\..\source\student\ITstudent.h" />
+    <ClInclude Include="network_server.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
